--- a/index1.html
+++ b/index1.html
@@ -230,6 +230,7 @@ font-family:Breul Grotesk A Regular;
   margin-bottom: 10px;}
   
   .info-bron {
+    display: none;
     list-style-type:none;
     margin-left: 0;
     padding-left: 0;
@@ -359,7 +360,7 @@ font-family:Breul Grotesk A Regular;
       width: 300px;
       height:auto;
       margin-bottom:0px;
-      border:2px dashed blue;
+      
     }
 
     .modal-content a {
@@ -382,7 +383,7 @@ font-family:Breul Grotesk A Regular;
   height: 4px;
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 3px;
-  margin: 0px auto 32px auto;
+  margin: 10px auto 20px auto;
 }
 
   
